--- a/lib/components/fo_notification/fo_notification_component.scss
+++ b/lib/components/fo_notification/fo_notification_component.scss
@@ -13,7 +13,10 @@
     color: white;
 
     div#header {
-      @include fo-button-font-size(0.7rem);
+      fo-button {
+        font-size: 0.7rem;
+      }
+      
       fo-button {
         margin-top: -0.5rem;
         color: black;
