--- a/lib/components/fo_panel/fo_panel_component.scss
+++ b/lib/components/fo_panel/fo_panel_component.scss
@@ -11,7 +11,9 @@
     background-color: white;
 
     div#panelHeader {
-      @include fo-button-font-size(0.9rem);
+      fo-button {
+        font-size: 0.9rem;
+      }      
       display: flex;
       align-items: center;
 
