--- a/lib/components/fo_text_input/fo_textarea_input_component.scss
+++ b/lib/components/fo_text_input/fo_textarea_input_component.scss
@@ -5,8 +5,10 @@
 :host {
   display: block;
   position: relative;
-  font-size: 1rem;
-  @include fo-label-font-size(1em);
+
+  fo-label {
+    font-size: 1em;
+  }
 
   textarea {
     @include inputStyle;
