--- a/lib/components/fo_button/fo_button_component.scss
+++ b/lib/components/fo_button/fo_button_component.scss
@@ -4,6 +4,7 @@
 
 :host {
   display: inline-block;
+  //font-size: 1rem;
 
   button {
     width: 100%;
@@ -12,8 +13,8 @@
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-    font-size: 1rem;
-    @include material-icon-size(1.5rem);
+    font-size: 1em;
+    @include material-icon-size(1em);
     user-select: none;
     -webkit-user-select: none;
     transition: all 0.3s ease;
