--- a/lib/components/fo_data_table/fo_data_table_component.scss
+++ b/lib/components/fo_data_table/fo_data_table_component.scss
@@ -5,148 +5,181 @@
 @import '../../mixins.scss';
 
 :host {
-    display: block;
-    width: 100%;
-    color: #555;    
-    @include fo-text-input-font-size(0.8rem);
-    @include fo-dropdown-select-font-size(0.8rem);
-    @include fo-button-font-size(0.7rem);
-    .display-inline-block {
-        display: inline-block;
-    }
-    .float-right {
-        float: right;
-    }
-    .vertical-align-middle {
-        vertical-align: middle;
-    }
-    .box-shadow {
-        @include boxShadow();
-    }
-    fo-icon.small {
-      font-size: 0.8em;
-    }
+  display: block;
+  width: 100%;
+  color: #555;
+
+  fo-text-input {
+    font-size: 0.8rem;
+  }
+
+  fo-button {
+    font-size: 0.7rem;
+  }
+
+  fo-dropdown-select {
+    font-size: 0.8rem;
+  }
+
+  .display-inline-block {
+    display: inline-block;
+  }
+
+  .float-right {
+    float: right;
+  }
+
+  .vertical-align-middle {
+    vertical-align: middle;
+  }
+
+  .box-shadow {
+    @include boxShadow();
+  }
+
+  fo-icon.small {
+    font-size: 0.8em;
+  }
 }
 
 fieldset {
-    border: 0;
-    padding: 0;
-    margin-bottom: 0.2em;
+  border: 0;
+  padding: 0;
+  margin-bottom: 0.2em;
 }
 
 .faded {
-    opacity: 0.6;
+  opacity: 0.6;
 }
 
 material-input {
-    width: 100%;
+  width: 100%;
 }
 
 .clickable {
-    user-select: none;
-    -webkit-user-select: none;
+  user-select: none;
+  -webkit-user-select: none;
 }
 
 div.table-container {
-    position: relative;    
-    min-width: 245px;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    background-color: white;
-    z-index: 1;
-    div.output-container {
-        overflow-x: auto;
-        table.output {
-            -webkit-transition: opacity 0.2s;
-            -moz-transition: opacity 0.2s;
-            -o-transition: opacity 0.2s;
-            transition: opacity 0.2s;
-            min-width: 100%;
-            border-collapse: collapse;
-            border: 2px solid #eee;
-            font-size: 0.8rem;
-            table-layout: auto;
-            td {
-                white-space: nowrap;
-                padding-left: 0.4rem;
+  position: relative;
+  min-width: 245px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  background-color: white;
+  z-index: 1;
+
+  div.output-container {
+    overflow-x: auto;
+
+    table.output {
+      -webkit-transition: opacity 0.2s;
+      -moz-transition: opacity 0.2s;
+      -o-transition: opacity 0.2s;
+      transition: opacity 0.2s;
+      min-width: 100%;
+      border-collapse: collapse;
+      border: 2px solid #eee;
+      font-size: 0.8rem;
+      table-layout: auto;
+
+      td {
+        white-space: nowrap;
+        padding-left: 0.4rem;
+      }
+
+      td:first-child {
+        padding-left: 0.5rem;
+      }
+
+      thead {
+        tr {
+          background-color: #eee;
+
+          td {
+            overflow: hidden;
+            text-overflow: ellipsis;
+            cursor: pointer;
+            line-height: 1rem;
+            height: 1rem;
+
+            span {
+              font-size: 0.9rem;
+              font-stretch: ultra-condensed;
             }
-            td:first-child {
-                padding-left: 0.5rem;
-            }
-            thead {
-                tr {
-                    background-color: #eee;
-                    td {
-                        overflow: hidden;
-                        text-overflow: ellipsis;
-                        cursor: pointer;
-                        line-height: 1rem;
-                        height: 1rem;
-                        span {
-                            font-size: 0.9rem;
-                            font-stretch: ultra-condensed;
-                        }
-                    }
-                    td.buttonCell {
-                        width: 1rem;
-                    }
-                }
-                border-bottom: 2px solid #ddd;
-            }
-            tbody {
-                tr {
-                    cursor: pointer;
-                    td {
-                        overflow: hidden;
-                        text-overflow: ellipsis;
-                    }
-                }
-                tr:nth-child(even) {
-                    background-color: #f5f5f5;
-                }
-                tr:nth-child(odd) {
-                    background-color: #fff;
-                }
-                tr:hover {
-                    background-color: #eee;
-                }
-                border-bottom: 1px solid #ddd;
-            }
-        }
-    }
-    #select-step {
-        div#stepper {
-          line-height: 1.9rem;
-        }
-        #rows-per-page {
-            margin-top: 0.15rem;
-            margin-left: 0.2rem;
-        }
-        font-size: 0.9rem;
-        color: #888;
-        material-icon.disabled {
-            opacity: 0.3;
+          }
+
+          td.buttonCell {
+            width: 1rem;
+          }
         }
 
-        fo-dropdown-select {
-          width: 90px;
+        border-bottom: 2px solid #ddd;
+      }
+
+      tbody {
+        tr {
+          cursor: pointer;
+
+          td {
+            overflow: hidden;
+            text-overflow: ellipsis;
+          }
         }
+
+        tr:nth-child(even) {
+          background-color: #f5f5f5;
+        }
+
+        tr:nth-child(odd) {
+          background-color: #fff;
+        }
+
+        tr:hover {
+          background-color: #eee;
+        }
+
+        border-bottom: 1px solid #ddd;
+      }
     }
+  }
+
+  #select-step {
+    div#stepper {
+      line-height: 1.9rem;
+    }
+
+    #rows-per-page {
+      margin-top: 0.15rem;
+      margin-left: 0.2rem;
+    }
+
+    font-size: 0.9rem;
+    color: #888;
+
+    material-icon.disabled {
+      opacity: 0.3;
+    }
+
+    fo-dropdown-select {
+      width: 90px;
+    }
+  }
 }
 
 div.batch-operations-container {
-    -webkit-transition: margin 0.3s;
-    -moz-transition: margin 0.3s;
-    -o-transition: margin 0.3s;
-    transition: margin 0.3s;
-    background-color: white;
-    padding: 0.5rem 1rem;
-    z-index: 0;
-    margin-top: -8rem;
+  -webkit-transition: margin 0.3s;
+  -moz-transition: margin 0.3s;
+  -o-transition: margin 0.3s;
+  transition: margin 0.3s;
+  background-color: white;
+  padding: 0.5rem 1rem;
+  z-index: 0;
+  margin-top: -8rem;
 }
 
 div.batch-operations-container.expanded {
-    margin-top: -0.5rem;
+  margin-top: -0.5rem;
 }
