--- a/lib/components/fo_dropdown_select/fo_dropdown_select_component.scss
+++ b/lib/components/fo_dropdown_select/fo_dropdown_select_component.scss
@@ -1,18 +1,24 @@
 @import 'package:fo_components/components/fo_button/mixins';
 @import 'package:fo_components/components/fo_dropdown_list/mixins';
-@import 'package:fo_components/components/fo_label/mixins';
 @import 'package:grid_css/constants';
 @import '../../mixins.scss';
 
 :host {
   display: block;
   position: relative;
+  //font-size: 1rem;
+
   @include fo-button-vertical-padding(0.5em);
-  @include fo-label-font-size(1em);
-  @include fo-dropdown-list-font-size(1em);
+
+  fo-dropdown-list,
+  fo-label {
+    font-size: 1em;
+  }
 
   div#flexContainer {
-    @include fo-button-font-size(1em);
+    fo-button {
+      font-size: 1em;
+    }
 
     cursor: pointer;
     display: flex;
