--- a/lib/components/fo_text_input/fo_error_output_component.scss
+++ b/lib/components/fo_text_input/fo_error_output_component.scss
@@ -5,11 +5,12 @@
   position: absolute;
   width: 100%;
   z-index: 99;
-  margin: $medium 0;
+  margin: 0.5em 0;
   background-color: white;
   border-width: 1px;
   border-style: solid;
   border-radius: $x-small;
+  font-size: 1em;
 
   div#arrow {
     position: absolute;
