set line-height to 150% for selector/text-input

--- a/lib/components/fo_dropdown_select/fo_dropdown_select_component.scss
+++ b/lib/components/fo_dropdown_select/fo_dropdown_select_component.scss
@@ -40,6 +40,7 @@
 
       div#selectedValue {
         flex: 1;
+        line-height: 150%;
         overflow: hidden;
         text-overflow: ellipsis;
         white-space: nowrap;
