added materialIcon input

--- a/lib/components/fo_modal/fo_modal_component.html
+++ b/lib/components/fo_modal/fo_modal_component.html
@@ -13,7 +13,7 @@
                  [themeColor]="buttonColor"
                  [themeBackgroundColor]="buttonBackgroundColor"
                  icon="close"
-                 [materialIcon]="true"
+                 [materialIcon]="materialIcon"
                  (trigger)="close()"></fo-button>
     </div>
     <div id="modalError"
