--- a/lib/components/fo_button/fo_button_component.scss
+++ b/lib/components/fo_button/fo_button_component.scss
@@ -4,7 +4,8 @@
 
 :host {
   display: inline-block;
-  
+  vertical-align: top;
+
   button {
     width: 100%;
     height: 100%;
@@ -23,35 +24,42 @@
     border-width: 1px;
     border-style: solid;
     box-sizing: border-box;
-    color: white;    
+    color: white;
     border-radius: $x-small;
     display: flex;
     justify-content: space-between;
+    align-items: center;
 
     fo-icon,
     material-icon {
       margin: 0;
     }
 
+    ::ng-deep fo-icon>span {
+      line-height: 150%;
+    }
+
     div#leading {
-      margin-right: 0.5em;
+      display: flex;
+      margin-right: 0.25em;
     }
 
     div#trailing {
-      margin-left: 0.5em;
+      display: flex;
+      margin-left: 0.25em;
     }
 
     div#center {
-      fo-icon.spaced::before {
-        content: " ";
-      }
-
       white-space: nowrap;
       text-overflow: ellipsis;
       flex: auto;
       display: flex;
       align-items: center;
       justify-content: center;
+
+      div {
+        display: flex;
+      }
     }
   }
 }
@@ -74,7 +82,7 @@
 
 :host[dense] {
   button {
-    padding: 0.25em 0.5em;    
+    padding: 0.25em 0.5em;
   }
 }
 
