fixed number input trailing space issue

--- a/lib/components/fo_number_input/fo_number_input_component.html
+++ b/lib/components/fo_number_input/fo_number_input_component.html
@@ -1,10 +1,10 @@
-  <fo-label [value]="label"></fo-label>
+<fo-label [value]="label"></fo-label>
 <div id="flexContainer">
   <fo-button clearSize
              noRightBorder
              [attr.tabindex]="tabIndexSub"
              [disabled]="disabled || (value != null && value <= min)"
-             (mousedown)="onMouseDown(-step)"             
+             (mousedown)="onMouseDown(-step)"
              (keydown)="onKeyDown($event, -step)"
              icon="remove">
   </fo-button>
@@ -22,9 +22,9 @@
              noLeftBorder
              [attr.tabindex]="tabIndexAdd"
              [disabled]="disabled || (value != null && value >= max)"
-             (mousedown)="onMouseDown(step)"             
+             (mousedown)="onMouseDown(step)"
              (keydown)="onKeyDown($event, step)"
              icon="add">
   </fo-button>
-  <span>&nbsp;{{trailingText}}</span>
+  <span *ngIf="trailingText != null" id="trailing">{{trailingText}}</span>
 </div>
