--- a/lib/components/fo_number_input/fo_number_input_component.html
+++ b/lib/components/fo_number_input/fo_number_input_component.html
@@ -26,5 +26,5 @@
              (keydown)="onKeyDown($event, step)"
              icon="add">
   </fo-button>
-  <span *ngIf="trailingText?.isEmpty != false" id="trailing">{{trailingText}}</span>
+  <span *ngIf="trailingText?.isNotEmpty == true" id="trailing">{{trailingText}}</span>
 </div>
