removed margin from dropdown list hr

--- a/lib/components/fo_dropdown_list/fo_dropdown_list_component.scss
+++ b/lib/components/fo_dropdown_list/fo_dropdown_list_component.scss
@@ -1,5 +1,5 @@
-@import 'package:grid_css/constants';
-@import '../../mixins';
+@import "package:grid_css/constants";
+@import "../../mixins";
 
 :host {
   //font-size: 1rem;
@@ -17,5 +17,6 @@
   hr {
     border-top: 0;
     border-style: solid;
+    margin: 0;
   }
 }
