added showDropdownCategoryLabels to DropdownSelect & TextInput

--- a/lib/components/fo_dropdown_select/fo_dropdown_select_component.html
+++ b/lib/components/fo_dropdown_select/fo_dropdown_select_component.html
@@ -30,6 +30,7 @@
                   [options]="options"
                   [offsetHorizontal]="1"
                   [showSearch]="showSearch"
+                  [showCategoryLabels]="showDropdownCategoryLabels"
                   [constrainToViewPort]="constrainToViewPort"
                   [allowNullSelection]="allowNullSelection"
                   [materialIcons]="materialIcons"
