--- a/lib/components/fo_text_input/fo_text_input_component.html
+++ b/lib/components/fo_text_input/fo_text_input_component.html
@@ -35,6 +35,7 @@
                     [options]="options"
                     [showCategoryLabels]="showDropdownCategoryLabels"
                     [offsetTop]="null"
+                    [offsetHorizontal]="1"
                     [attr.square]="square"
                     [filter]="value"
                     [constrainToViewPort]="constrainToViewPort"
