--- a/lib/components/fo_dropdown_list/fo_dropdown_list_component.html
+++ b/lib/components/fo_dropdown_list/fo_dropdown_list_component.html
@@ -20,7 +20,8 @@
   </div>
   <div *ngIf="allowNullSelection && filter?.isEmpty != false">
     <fo-dropdown-option [model]="nullOption"
-                        (click)="onSelect($event, nullOption)"
+                        (mousedown)="onSelect($event, nullOption)"
+                        (touchstart)="onSelect($event, nullOption)"
                         [materialIcon]="materialIcons"></fo-dropdown-option>
   </div>
   <div *ngFor="let category of filteredOptions.keys">
@@ -29,7 +30,8 @@
     <fo-dropdown-option *ngFor="let option of filteredOptions[category]"
                         [model]="option"
                         [materialIcon]="materialIcons"
-                        (click)="onSelect($event, option)">
+                        (mousedown)="onSelect($event, option)"
+                        (touchstart)="onSelect($event, option)">
     </fo-dropdown-option>
     <hr *ngIf="category != filteredOptions.keys.last"
         class="gray-color-bright">
