added filterOptions input to TextInputComponent

--- a/lib/components/fo_text_input/fo_text_input_component.html
+++ b/lib/components/fo_text_input/fo_text_input_component.html
@@ -36,7 +36,7 @@
                     [offsetTop]="null"
                     [offsetHorizontal]="1"
                     [attr.square]="square"
-                    [filter]="value"
+                    [filter]="filterValue"
                     [constrainToViewPort]="constrainToViewPort"
                     [materialIcons]="materialIcons"
                     [width]="dropdownWidth"
