--- a/lib/components/fo_text_input/fo_textarea_input_component.scss
+++ b/lib/components/fo_text_input/fo_textarea_input_component.scss
@@ -1,6 +1,6 @@
-@import '../../mixins';
-@import '../fo_label/mixins';
-@import 'shared';
+@import "../../mixins";
+@import "../fo_label/mixins";
+@import "shared";
 
 :host {
   display: block;
@@ -18,6 +18,7 @@
     border-style: solid;
     border-radius: $borderRadius;
     border-width: 1px;
+    font-family: inherit;
   }
 
   textarea,
