--- a/lib/components/fo_carousel/fo_carousel_component.scss
+++ b/lib/components/fo_carousel/fo_carousel_component.scss
@@ -1,6 +1,6 @@
-@import 'package:angular_components/material_button/mixins';
-@import '../fo_button/mixins';
-@import 'package:grid_css/constants.scss';
+@import "package:angular_components/material_button/mixins";
+@import "../fo_button/mixins";
+@import "package:grid_css/constants.scss";
 
 :host {
   display: block;
@@ -24,7 +24,7 @@
     -ms-transition: opacity 200ms;
     -o-transition: opacity 200ms;
     transition: opacity 200ms;
-    
+
     fo-button {
       ::ng-deep material-icon {
         i {
@@ -32,7 +32,6 @@
         }
       }
     }
-    
   }
 
   .arrow.faded {
@@ -56,7 +55,7 @@
   @media screen and (max-width: $medium-width-threshold - 1) {
     .arrow {
       display: none;
-    }    
+    }
   }
 
   #slide-container {
@@ -69,13 +68,35 @@
       -ms-transition: -ms-transform 500ms;
       -o-transition: -o-transform 500ms;
       transition: transform 500ms;
-      white-space: nowrap;      
+      white-space: nowrap;
     }
 
     #slide-transformer {
       ::ng-deep * {
         white-space: initial;
       }
+    }
+  }
+}
+
+:host[noFadeAnimation] {
+  .arrow {
+    -webkit-transition: none;
+    -moz-transition: none;
+    -ms-transition: none;
+    -o-transition: none;
+    transition: none;
+  }
+}
+
+:host[noSlideAnimation] {
+  #slide-container {
+    #slide-transformer {
+      -webkit-transition: none;
+      -moz-transition: none;
+      -ms-transition: none;
+      -o-transition: none;
+      transition: none;      
     }
   }
 }
