--- a/lib/components/fo_carousel/fo_carousel_component.scss
+++ b/lib/components/fo_carousel/fo_carousel_component.scss
@@ -1,4 +1,3 @@
-@import "package:angular_components/material_button/mixins";
 @import "../fo_button/mixins";
 @import "package:grid_css/constants.scss";
 
@@ -10,28 +9,29 @@
   }
 
   .arrow {
-    opacity: 0.3;
+    cursor: pointer;
     position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     top: auto;
     bottom: 50%;
+    width: 56px;
+    height: 56px;
+    background-color: white;
+    border: 1px solid #dde2e9;
+    text-align: center;
+    box-sizing: border-box;
     -webkit-transform: translateY(50%);
     -moz-transform: translateY(50%);
     -ms-transform: translateY(50%);
     -o-transform: translateY(50%);
     transform: translateY(50%);
-    -webkit-transition: opacity 200ms;
-    -moz-transition: opacity 200ms;
-    -ms-transition: opacity 200ms;
-    -o-transition: opacity 200ms;
-    transition: opacity 200ms;
-
-    fo-button {
-      ::ng-deep material-icon {
-        i {
-          font-size: 2em;
-        }
-      }
-    }
+    -webkit-transition: background-color 200ms;
+    -moz-transition: background-color 200ms;
+    -ms-transition: background-color 200ms;
+    -o-transition: background-color 200ms;
+    transition: background-color 200ms;
   }
 
   .arrow.faded {
@@ -39,7 +39,8 @@
   }
 
   .arrow:hover {
-    opacity: 1;
+    background-color: #f8f9fa;
+    border-color: #cdd2d9;
   }
 
   #arrow-left {
@@ -96,7 +97,7 @@
       -moz-transition: none;
       -ms-transition: none;
       -o-transition: none;
-      transition: none;      
+      transition: none;
     }
   }
 }
