--- a/lib/components/fo_text_input/fo_error_output_component.scss
+++ b/lib/components/fo_text_input/fo_error_output_component.scss
@@ -1,4 +1,4 @@
-@import 'package:grid_css/constants';
+@import "package:grid_css/constants";
 
 :host {
   display: block;
@@ -11,6 +11,7 @@
   border-style: solid;
   border-radius: $x-small;
   font-size: 1em;
+  box-sizing: border-box;
 
   div#arrow {
     position: absolute;
