--- a/lib/components/fo_carousel/fo_carousel_component.scss
+++ b/lib/components/fo_carousel/fo_carousel_component.scss
@@ -1,6 +1,8 @@
 @import "../fo_button/mixins";
 @import "package:grid_css/constants.scss";
 
+$slideTransitionSpeed: 200ms;
+
 :host {
   display: block;
 
@@ -63,41 +65,19 @@
     position: relative;
     overflow: hidden;
 
-    #slide-transformer {
-      -webkit-transition: -webkit-transform 500ms;
-      -moz-transition: -moz-transform 500ms;
-      -ms-transition: -ms-transform 500ms;
-      -o-transition: -o-transform 500ms;
-      transition: transform 500ms;
-      white-space: nowrap;
+    #slide-transformer.animate {
+      -webkit-transition: -webkit-transform $slideTransitionSpeed;
+      -moz-transition: -moz-transform $slideTransitionSpeed;
+      -ms-transition: -ms-transform $slideTransitionSpeed;
+      -o-transition: -o-transform $slideTransitionSpeed;
+      transition: transform $slideTransitionSpeed;
     }
 
     #slide-transformer {
+      white-space: nowrap;
       ::ng-deep * {
         white-space: initial;
       }
-    }
-  }
-}
-
-:host[noFadeAnimation] {
-  .arrow {
-    -webkit-transition: none;
-    -moz-transition: none;
-    -ms-transition: none;
-    -o-transition: none;
-    transition: none;
-  }
-}
-
-:host[noSlideAnimation] {
-  #slide-container {
-    #slide-transformer {
-      -webkit-transition: none;
-      -moz-transition: none;
-      -ms-transition: none;
-      -o-transition: none;
-      transition: none;
     }
   }
 }
