--- a/lib/components/fo_dropdown_list/fo_dropdown_list_component.scss
+++ b/lib/components/fo_dropdown_list/fo_dropdown_list_component.scss
@@ -2,12 +2,13 @@
 @import "../../mixins";
 
 :host {
-  //font-size: 1rem;
-
   div#filterContainer {
     margin: 0.5em;
   }
   div.category {
+    color: #717c8b;
+    font-size: 0.75em;
+    padding: 5px 5px 0 5px;
     margin: 1em 0.5em 0.25em 0.5em;
     text-transform: uppercase;
   }
