--- a/lib/components/fo_text_input/fo_text_input_component.html
+++ b/lib/components/fo_text_input/fo_text_input_component.html
@@ -34,7 +34,8 @@
   <fo-dropdown-list [options]="options"
                     [showCategoryLabels]="showDropdownCategoryLabels"
                     [offsetTop]="null"
-                    [offsetHorizontal]="1"
+                    [offsetHorizontal]="noFocusShadow == '1' ? 0 : 1"
+                    [attr.noShadow]="noFocusShadow"
                     [attr.square]="square"
                     [filter]="filterValue"
                     [constrainToViewPort]="constrainToViewPort"
