--- a/lib/components/fo_dropdown_list/_mixins.scss
+++ b/lib/components/fo_dropdown_list/_mixins.scss
@@ -1,25 +1,25 @@
-@import 'package:angular_components/material_icon/mixins';
+@import "package:angular_components/material_icon/mixins";
 
 @mixin fo-dropdown-list-colors($primaryColor, $labelColor, $borderColor) {
-  ::ng-deep div#dropdownContent {
-    border-color: $borderColor;
+  ::ng-deep fo-dropdown {
+    div#dropdownContent {
+      fo-dropdown-option:not(:hover) {
+        fo-icon {
+          color: $primaryColor;
+        }
 
-    fo-dropdown-option:not(:hover) {
-      fo-icon {
-        color: $primaryColor;
+        div#label {
+          color: $labelColor;
+        }
+
+        div#secondaryLabel {
+          color: darken($borderColor, 20%);
+        }
       }
 
-      div#label {
-        color: $labelColor;
+      fo-dropdown-option:hover {
+        background-color: $primaryColor;
       }
-
-      div#secondaryLabel {
-        color: darken($borderColor, 20%);
-      }
-    }
-
-    fo-dropdown-option:hover {
-      background-color: $primaryColor;
     }
   }
 }
