--- a/lib/components/fo_text_input/fo_error_output_component.html
+++ b/lib/components/fo_text_input/fo_error_output_component.html
@@ -1,3 +1,2 @@
 <div id="arrow"></div>
-<div id="message"
-     class="black-color">{{message | capitalize}}</div>
+<div id="message">{{message | capitalize}}</div>
