--- a/lib/components/fo_text_input/fo_error_output_component.scss
+++ b/lib/components/fo_text_input/fo_error_output_component.scss
@@ -1,11 +1,11 @@
-@import 'package:grid_css/constants';
+@import "package:grid_css/constants";
 
 :host {
   display: block;
   position: absolute;
   width: 100%;
   z-index: 99;
-  margin: 0.5em 0;
+  margin: 10px 0;
   background-color: white;
   border-width: 1px;
   border-style: solid;
