removed error stuff

--- a/lib/components/fo_label/fo_label_component.html
+++ b/lib/components/fo_label/fo_label_component.html
@@ -1,6 +1,5 @@
 <label>
   <div *ngIf="value?.isEmpty == false"
-       id="label"
-       [class.color-alert]="error == true"> {{value}} </div>
+       id="label"> {{value}} </div>
   <ng-content></ng-content>
 </label>
