error output now has correct box-sizing

--- a/lib/components/fo_text_input/fo_error_output_component.scss
+++ b/lib/components/fo_text_input/fo_error_output_component.scss
@@ -11,6 +11,7 @@
   border-style: solid;
   border-radius: $x-small;
   font-size: 1em;
+  box-sizing: border-box;
 
   div#arrow {
     position: absolute;
