--- a/lib/components/fo_text_input/fo_text_input_component.scss
+++ b/lib/components/fo_text_input/fo_text_input_component.scss
@@ -108,9 +108,11 @@
 }
 
 :host[transparent] {
-  div#flexContainer {
-    input {
-      background-color: transparent;
+  fo-label {
+    div#flexContainer {
+      input {
+        background-color: transparent;
+      }
     }
   }
 }
